Fix enketo date picker dropdown z-index so it works in modals in Chrome
Issue: #1120

--- a/static/enketo/style/enketo-modal.css
+++ b/static/enketo/style/enketo-modal.css
@@ -7,3 +7,7 @@
 .modal .modal-dialog .form-footer {
 	width: 100%;
 }
+
+.datepicker-dropdown {
+  z-index: 1050 !important;
+}
